        2.6.16.27-0.9 (SLES 10)
       * Client support for unpatched kernels:
	(see https://mail.clusterfs.com/wikis/lustre/PatchlessClient)
	2.6.16 - 2.6.19 vanilla (kernel.org)
	2.6.9-42.0.8.EL (RHEL 4)
       * Recommended e2fsprogs version: 1.39.cfs7
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * bug fixes

Severity   : normal
Frequency  : rare
Bugzilla   : 11722
Description: Transient SCSI error results in persistent IO issue
Details    : iobuf->dr_error is not reinitialized to 0 between two
	     uses.

Severity   : normal
Frequency  : sometimes when underlying device returns I/O errors
Bugzilla   : 11743
Description: OSTs not going read-only during write failures
Details    : OSTs are not remounted read-only when the journal commit threads
	     get I/O errors because fsfilt_ext3 calls journal_start/stop()
	     instead of the ext3 wrappers.

Severity   : minor
Bugzilla   : 12364
Description: poor connect scaling with increasing client count
Details    : Don't run filter_grant_sanity_check for more than 100 exports
	     to improve scaling for large numbers of clients.

Severity   : normal
Frequency  : SLES10 only
Bugzilla   : 12538
Description: sanity-quota.sh quotacheck failed: rc = -22
Details    : Quotas cannot be enabled on SLES10.

Severity   : normal
Frequency  : liblustre clients only
Bugzilla   : 12229
Description: getdirentries does not give error when run on compute nodes
Details    : getdirentries does not fail when the size specified as an argument
	     is too small to contain at least one entry

Severity   : enhancement
Bugzilla   : 11548
Description: Add LNET router traceability for debug purposes
Details    : If a checksum failure occurs with a router as part of the
	     IO path, the NID of the last router that forwarded the bulk data
	     is printed so it can be identified.

Severity   : normal
Frequency  : rare
Bugzilla   : 11315